--- a/chientd/package.json
+++ b/chientd/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
+    "moment": "^2.29.3",
+    "momment": "^0.0.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
